# SPOP-proj

./: .gitignore  Draw.hs  DrawState.hs  Game.hs  GameState.hs  Graphics.hs  Input.hs  README.md  Rules.hs  WolfsAndSheeps.cabal  main.hs  stack.yaml
src/: Dialog.hs  DrawState.hs  Game.hs  Graphics.hs  Input.hs  Main.hs  Rules.hs
