name:                WolfsAndSheeps
version:             0.1.0.0
synopsis:            Simple wolfs and sheeps board game
-- description:
-- license:           
-- license-file:      
-- author:             
-- maintainer:          
-- copyright:
-- category:
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md
cabal-version:       >=1.10

executable WolfsAndSheeps
  main-is:             Main.hs
  -- other-modules: 
  -- other-extensions:
  build-depends:       base >=4.9, containers >=0.5, text >=1.2, sdl2 >=2.2
  hs-source-dirs:      src
  default-language:    Haskell2010
